--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://tamhuynh15123.github.io/proposal-aws/"
+baseURL = "https://tamhuynh15123.github.io/proposal/"
 #relativeURLs = true
 #canonifyURLs = true
 defaultContentLanguage = "en"
